--- a/requirements.txt
+++ b/requirements.txt
@@ -97,5 +97,5 @@ urllib3==2.5.0
 xxhash==3.5.0
 yarl==1.20.1
 pinecone-client==2.2.4
-scikit-learn==1.3.2
+scikit-learn>=1.5.0
 unstructured==0.14.3
