--- a/requirements.txt
+++ b/requirements.txt
@@ -22,15 +22,15 @@ python-docx==1.1.2
 python-email==0.0.1
 
 # NLP and text processing (optional, enhanced features)
-spacy==3.8.2
+spacy
 # Run: python -m spacy download en_core_web_sm
 
 # Data processing and utilities
-pydantic==2.11.7
-pydantic-core==2.33.2
+pydantic
+pydantic-core
 python-dotenv==1.0.1
-pandas==2.3.1
-numpy==1.26.4
+pandas
+numpy
 
 # Security and authentication
 python-jose[cryptography]==3.3.0
@@ -47,7 +47,7 @@ isort==5.13.2
 langchain-community>=0.0.34
 
 # Backward compatibility - keeping existing working packages
-accelerate==1.9.0
+accelerate
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
@@ -71,14 +71,13 @@ tqdm==4.66.4
 pydot==4.0.1
 PyMuPDF==1.26.3
 PyMySQL==1.1.1
-psycopg2-binary==2.9.9
 pyparsing==3.2.3
 pytz==2025.2
 pyxnat==1.6.3
 rdflib==7.1.4
 regex==2023.12.25
 requests>=2.32.2
-scipy==1.16.1
+scipy
 setuptools==80.9.0
 simplejson==3.20.1
 sniffio==1.3.1
@@ -86,9 +85,9 @@ SQLAlchemy==2.0.35
 sympy==1.14.0
 tiktoken==0.9.0
 tokenizers==0.21.2
-torch==2.7.1
+torch
 traits==7.0.2
-transformers==4.53.2
+transformers
 trl==0.19.1
 typing-inspection==0.4.1
 typing_extensions==4.12.2
@@ -96,6 +95,6 @@ tzdata==2025.2
 urllib3==2.5.0
 xxhash==3.5.0
 yarl==1.20.1
-pinecone-client==2.2.4
+pinecone-client
 scikit-learn>=1.5.0
 unstructured
