--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ openai==1.96.1
 # Vector database
 
 # Database (PostgreSQL)
-psycopg2-binary==2.9.9
+psycopg[binary]
 
 # Document processing
 python-docx==1.1.2
